{
    "name": "UnityInputs",
    "maps": [
        {
            "name": "Game",
            "id": "265c38f5-dd18-4d34-b198-aec58e1627ff",
            "actions": [
                {
                    "name": "BulletAttack",
                    "type": "Button",
                    "id": "1077f913-a9f9-41b1-acb3-b9ee0adbc744",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LaserAttack",
                    "type": "Button",
                    "id": "d71b993e-7406-4384-9d78-e3777cf08fc0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveForward",
                    "type": "Value",
                    "id": "50fd2809-3aa3-4a90-988e-1facf6773553",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Rotate",
                    "type": "Value",
                    "id": "40821956-d787-4f43-8592-73d3e02ffe5c",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "StartLevel",
                    "type": "Button",
                    "id": "d9df9bf5-efd6-43ba-ae4e-52fb49eab8b8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "abb776f3-f329-4f7b-bbf8-b577d13be018",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BulletAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "908b955d-8913-4a36-a921-a6f2a3d80517",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BulletAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Arrows [Keyboard]",
                    "id": "9f08fc94-7899-4dd4-96b8-f89655cccbca",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "f7405814-6e2f-4953-92ed-8f7b15a19768",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "cef8d7f7-0772-4d34-a203-b55229717e11",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "WASD [Keyboard]",
                    "id": "0cf53ab4-17d5-4172-bede-6bdc1846779f",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "07d5826f-f06e-4ef5-8550-9f8405131895",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "6915eb3d-9515-45aa-812d-036a03348519",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "b7f51006-b584-4799-ac9e-c32b304afe95",
                    "path": "<Gamepad>/rightStick/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9992b46e-8fed-4023-8359-9432e741410e",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StartLevel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8c514ed6-eb21-47ff-8903-c5ef3e843f0a",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StartLevel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "de31ddf3-51a2-40d6-8ac1-f130f114f40e",
                    "path": "<Keyboard>/alt",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LaserAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0afbd135-244c-486a-888e-8e98a343c9c4",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LaserAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Arrows [Keyboard]",
                    "id": "6953ce69-2b12-4fc1-85cf-69f0af4ef7fe",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveForward",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "0900bc92-5959-4822-bd98-2624f97c632a",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveForward",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "WASD [Keyboard]",
                    "id": "c4590827-0b34-4746-b075-404423c3470f",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveForward",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "3e53f915-360a-410c-865e-2be4a53dfb97",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveForward",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "2dae7dca-6217-46a6-ac5a-6beae29cd176",
                    "path": "<Gamepad>/leftStick/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveForward",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}